AStart/src/parser.output
Nonterminals useless in grammar

   MAIN_BODY
   FUNCTION_LIST
   DEC_FUNCTION
   ARGUMENT_LIST
   TYPE
   BODY
   STATEMENT
   RETURN_STATEMENT
   DECLARE_VAR
   ASSIGN_STATEMENT
   EXPR_TOP
   EXPR
   TERM
   FACTOR


Terminals unused in grammar

   T_LSQBRACKET
   T_RSQBRACKET
   T_LCUBRACKET
   T_RCUBRACKET
   T_LTRIBRACKET
   T_RTRIBRACKET
   T_ASSIGN
   T_DOT
   T_COLON
   T_SPEACHMARK
   T_APOSTROPHE
   T_LAND
   T_LOR
   T_LEQUAL
   T_LNOTEQUAL
   T_LLESSOREQUAL
   T_LMOREOREQUAL
   T_INT
   T_DOUBLE
   T_STRING
   T_BOOL
   T_VOID
   T_TIMES
   T_DIVIDE
   T_PLUS
   T_MINUS
   T_EXPONENT
   T_LOG
   T_EXP
   T_SQRT
   T_NUMBER
   T_RETURN


Rules useless in grammar

    6 MAIN_BODY: FUNCTION_LIST

    7 FUNCTION_LIST: FUNCTION_LIST DEC_FUNCTION
    8              | DEC_FUNCTION

    9 DEC_FUNCTION: TYPE T_ID T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET

   10 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA TYPE T_ID
   11              | TYPE T_ID
   12              | %empty

   13 TYPE: T_INT
   14     | T_DOUBLE
   15     | T_STRING
   16     | T_VOID
   17     | T_BOOL

   18 BODY: BODY STATEMENT
   19     | STATEMENT
   20     | %empty

   21 STATEMENT: RETURN_STATEMENT
   22          | DECLARE_VAR
   23          | FUNCTION_STATEMENT
   24          | ASSIGN_STATEMENT

   25 RETURN_STATEMENT: T_RETURN EXPR T_SEMICOLON

   26 DECLARE_VAR: TYPE T_ID T_ASSIGN EXPR T_SEMICOLON
   27            | TYPE T_ID T_SEMICOLON

   28 ASSIGN_STATEMENT: T_ID T_ASSIGN EXPR T_SEMICOLON

   29 EXPR_TOP: EXPR
   30         | T_SPEACHMARK T_ID T_SPEACHMARK
   31         | T_APOSTROPHE T_ID T_APOSTROPHE

   32 EXPR: TERM
   33     | EXPR T_PLUS TERM
   34     | EXPR T_MINUS TERM

   35 TERM: FACTOR
   36     | TERM T_TIMES FACTOR
   37     | TERM T_DIVIDE FACTOR
   38     | FACTOR T_EXPONENT TERM

   39 FACTOR: T_NUMBER
   40       | T_LBRACKET EXPR T_RBRACKET
   41       | T_ID
   42       | T_LOG T_LBRACKET EXPR T_RBRACKET
   43       | T_EXP T_LBRACKET EXPR T_RBRACKET
   44       | T_SQRT T_LBRACKET EXPR T_RBRACKET


Grammar

    0 $accept: ROOT $end

    1 ROOT: FUNCTION_STATEMENT

    2 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE T_COMMA T_ID
    3                      | T_ID
    4                      | %empty

    5 FUNCTION_STATEMENT: T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET T_SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
T_LSQBRACKET (258)
T_RSQBRACKET (259)
T_LCUBRACKET (260)
T_RCUBRACKET (261)
T_LTRIBRACKET (262)
T_RTRIBRACKET (263)
T_LBRACKET (264) 5
T_RBRACKET (265) 5
T_ASSIGN (266)
T_DOT (267)
T_COMMA (268) 2
T_COLON (269)
T_SEMICOLON (270) 5
T_SPEACHMARK (271)
T_APOSTROPHE (272)
T_LAND (273)
T_LOR (274)
T_LEQUAL (275)
T_LNOTEQUAL (276)
T_LLESSOREQUAL (277)
T_LMOREOREQUAL (278)
T_INT (279)
T_DOUBLE (280)
T_STRING (281)
T_BOOL (282)
T_VOID (283)
T_TIMES (284)
T_DIVIDE (285)
T_PLUS (286)
T_MINUS (287)
T_EXPONENT (288)
T_LOG (289)
T_EXP (290)
T_SQRT (291)
T_NUMBER (292)
T_ID (293) 2 3 5
T_RETURN (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
ROOT (41)
    on left: 1, on right: 0
ARGUMENT_LIST_NO_TYPE (42)
    on left: 2 3 4, on right: 2 5
FUNCTION_STATEMENT (43)
    on left: 5, on right: 1


State 0

    0 $accept: . ROOT $end

    T_ID  shift, and go to state 1

    ROOT                go to state 2
    FUNCTION_STATEMENT  go to state 3


State 1

    5 FUNCTION_STATEMENT: T_ID . T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET T_SEMICOLON

    T_LBRACKET  shift, and go to state 4


State 2

    0 $accept: ROOT . $end

    $end  shift, and go to state 5


State 3

    1 ROOT: FUNCTION_STATEMENT .

    $default  reduce using rule 1 (ROOT)


State 4

    5 FUNCTION_STATEMENT: T_ID T_LBRACKET . ARGUMENT_LIST_NO_TYPE T_RBRACKET T_SEMICOLON

    T_ID  shift, and go to state 6

    $default  reduce using rule 4 (ARGUMENT_LIST_NO_TYPE)

    ARGUMENT_LIST_NO_TYPE  go to state 7


State 5

    0 $accept: ROOT $end .

    $default  accept


State 6

    3 ARGUMENT_LIST_NO_TYPE: T_ID .

    $default  reduce using rule 3 (ARGUMENT_LIST_NO_TYPE)


State 7

    2 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE . T_COMMA T_ID
    5 FUNCTION_STATEMENT: T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE . T_RBRACKET T_SEMICOLON

    T_RBRACKET  shift, and go to state 8
    T_COMMA     shift, and go to state 9


State 8

    5 FUNCTION_STATEMENT: T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 10


State 9

    2 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE T_COMMA . T_ID

    T_ID  shift, and go to state 11


State 10

    5 FUNCTION_STATEMENT: T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET T_SEMICOLON .

    $default  reduce using rule 5 (FUNCTION_STATEMENT)


State 11

    2 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE T_COMMA T_ID .

    $default  reduce using rule 2 (ARGUMENT_LIST_NO_TYPE)
